# OpenBTS-subscriberRegistry

./: .clang-format  .gitmodules  CMakeLists.txt  SubscriberRegistry.cpp  SubscriberRegistry.h  config-cmake.h.in  servershare.cpp  servershare.h
Globals/: CMakeLists.txt  Globals.cpp  Globals.h
apps/: CMakeLists.txt  sipauthserve.cpp
